@@ -1,9 +1,12 @@
-ARG APP_INSIGHTS_AGENT_VERSION=2.5.1
+ARG APP_INSIGHTS_AGENT_VERSION=3.4.14
 FROM hmctspublic.azurecr.io/base/java:17-distroless
+
+COPY lib/applicationinsights.json /opt/app/
+COPY build/libs/fees-register-app.jar /opt/app/
 
 EXPOSE 8080
 
-COPY build/libs/fees-register-app.jar /opt/app/
-COPY lib/AI-Agent.xml /opt/app/
-
-CMD ["fees-register-app.jar"]
+CMD [ \
+    "--add-opens", "java.base/java.lang=ALL-UNNAMED", \
+    "fees-register-app.jar" \
+    ]
